[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Stuff/Scene2DIn3D.gd" type="Script" id=1]
[ext_resource path="res://Assets/DL/NetworkModuleDetailsManager.gd" type="Script" id=2]
[ext_resource path="res://Assets/Stuff/TextLine.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Stuff/DebouncingTimer.gd" type="Script" id=4]
[ext_resource path="res://Assets/DL/ImageTile.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.227451, 0.301961, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_bottom = 40.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.227451, 0.301961, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.541176, 0.6, 0.788235, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.396078, 0.431373, 0.556863, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.337255, 0.384314, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_right = 50.0
bg_color = Color( 0.227451, 0.301961, 0.552941, 1 )

[sub_resource type="Theme" id=4]
VScrollBar/styles/grabber = SubResource( 5 )
VScrollBar/styles/grabber_highlight = SubResource( 6 )
VScrollBar/styles/grabber_pressed = SubResource( 7 )
VScrollBar/styles/scroll = SubResource( 3 )

[node name="NetworkModuleDetailsScreen2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NetworkModuleDetailsManager" type="Control" parent="." groups=["on_receive_classification_results", "on_receive_image_data"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HSplitContainer" type="HSplitContainer" parent="NetworkModuleDetailsManager"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ModuleNotesPanel" type="PanelContainer" parent="NetworkModuleDetailsManager/HSplitContainer"]
margin_right = 400.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel"]
margin_right = 400.0
margin_bottom = 600.0
alignment = 2

[node name="ModuleNotes" type="VBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer"]
margin_top = 512.0
margin_right = 400.0
margin_bottom = 512.0
alignment = 2

[node name="TextLine" parent="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 516.0
margin_bottom = 556.0
text = "Scale images here:"

[node name="ImageScaleBar" type="HSlider" parent="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer"]
margin_top = 560.0
margin_right = 400.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 40 )
size_flags_vertical = 1
custom_styles/slider = SubResource( 8 )
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="DebouncingTimer" type="Timer" parent="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer/ImageScaleBar"]
wait_time = 0.5
one_shot = true
script = ExtResource( 4 )

[node name="ImagePanel" type="PanelContainer" parent="NetworkModuleDetailsManager/HSplitContainer"]
margin_left = 412.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel"]
margin_right = 612.0
margin_bottom = 600.0
custom_constants/separation = 20
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer"]
margin_right = 612.0
margin_bottom = 540.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
scroll_horizontal_enabled = false

[node name="ImageGrid" type="GridContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/ScrollContainer"]
margin_right = 256.0
margin_bottom = 256.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 8

[node name="ImageTile" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/ScrollContainer/ImageGrid" instance=ExtResource( 6 )]
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Legend" type="HBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer"]
margin_top = 560.0
margin_right = 612.0
margin_bottom = 600.0
custom_constants/separation = 30
alignment = 1

[node name="LegendItemZero" type="HBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend"]
margin_left = 24.0
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="ColorRect" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItemZero"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0, 0, 0, 1 )

[node name="Equals" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItemZero" instance=ExtResource( 3 )]
margin_left = 50.0
margin_right = 68.0
rect_min_size = Vector2( 0, 40 )
text = "="
clip_text = false

[node name="value_zero_decoded" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItemZero" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 168.0
rect_min_size = Vector2( 0, 40 )
text = "value"
clip_text = false

[node name="LegendItem127" type="HBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend"]
margin_left = 222.0
margin_right = 390.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="ColorRect" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItem127"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="Equals" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItem127" instance=ExtResource( 3 )]
margin_left = 50.0
margin_right = 68.0
rect_min_size = Vector2( 0, 40 )
text = "="
clip_text = false

[node name="value_127_decoded" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItem127" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 168.0
rect_min_size = Vector2( 0, 40 )
text = "value"
clip_text = false

[node name="LegendItem255" type="HBoxContainer" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend"]
margin_left = 420.0
margin_right = 588.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="TextureRect" type="ColorRect" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItem255"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="Equals" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItem255" instance=ExtResource( 3 )]
margin_left = 50.0
margin_right = 68.0
rect_min_size = Vector2( 0, 40 )
text = "="
clip_text = false

[node name="value_255_decoded" parent="NetworkModuleDetailsManager/HSplitContainer/ImagePanel/VBoxContainer/Legend/LegendItem255" instance=ExtResource( 3 )]
margin_left = 78.0
margin_right = 168.0
rect_min_size = Vector2( 0, 40 )
text = "value"
clip_text = false

[connection signal="value_changed" from="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer/ImageScaleBar" to="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer/ImageScaleBar/DebouncingTimer" method="_on_trigger"]
[connection signal="timeout" from="NetworkModuleDetailsManager/HSplitContainer/ModuleNotesPanel/VBoxContainer/ImageScaleBar/DebouncingTimer" to="NetworkModuleDetailsManager" method="_on_image_scale_changed"]
